# zmaj-lm

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
configs/: tiny_stories.yaml  tiny_stories_swiglu.yaml
configs/tokenizer_train/: bpe_32k_eng_code.yaml
notebooks/: explore_masks.ipynb
scripts/: run_train_tokenizer.py  train.py
src/zmaj_lm/config/: __init__.py  dataset_config.py  model_config.py  tokenizer_config.py  training_config.py
src/zmaj_lm/data/: dataset.py
src/zmaj_lm/data/tokenizer/: evaluate_tokenizer.py  train_tokenizer.py  utils.py
src/zmaj_lm/models/: activations.py  attention.py  embeddings.py  feedforward.py  gpt.py  positional_encoding.py  transformer_block.py
src/zmaj_lm/training/: __init__.py  trainer.py
src/zmaj_lm/utils/: masks.py  prng.py  shapes.py  visualize.py
tests/: README.md  __init__.py  conftest.py  test_environment.py
tests/integration/: __init__.py  test_dataset_integration.py  test_trainer_integration.py
tests/unit/: __init__.py
tests/unit/config/: test_dataset_config.py  test_model_config.py  test_tokenizer_config.py  test_training_config.py
tests/unit/data/: __init__.py  test_dataset.py
tests/unit/data/tokenizer/: __init__.py  test_evaluate_tokenizer.py  test_train_tokenizer.py
tests/unit/models/: test_attention.py  test_embeddings.py  test_feedforward.py  test_gpt.py  test_positional_encoding.py  test_transformer_block.py
tests/unit/training/: test_trainer.py
tests/unit/utils/: test_masks.py  test_prng.py  test_shapes.py
